openpearl-code/testsuite/must_not_compile/00_basics/006_no_problem_statement.expect
006_no_problem_statement.prl:2:0: ERROR : Syntax error :mismatched input 'DCL' expecting {'MODEND', 'SYSTEM', 'PROBLEM', '__cpp__', '__cpp'}
DCL f FIXED;
  ^
