openpearl-code/testsuite/must_not_compile/00_basics/006_no_problem_statement.prl
MODULE(m1);
DCL f FIXED;
MODEND;

